fixed:Support Cloudflare D1 Edge Runtime
- Migrates entire application to the Edge Runtime for serverless deployment.
- Adds D1 as a new database storage provider.
- Replaces  with  for Edge compatibility.

Signed-off-by: YANXIAOXIH <yanxiaoxi@live.com>

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,8 +2,10 @@
 
 ### Added
 - 添加内置主题，支持用户自定义CSS
+- 添加 Cloudflare D1 数据库支持
 ### Changed
 - 优化搜索页面缓存机制
+- 全面迁移至 Edge Runtime
 ### Fixed
 - 镜像健康检查问题
 - 弹幕功能适配移动端
